[package]
name = "impl2001-rs"
version = "0.1.0"
authors = ["huoju <virushuo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
